--- a/QL_CDC-master/QL_CDC/Views/CuaHang/DaAn.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/CuaHang/DaAn.cshtml
@@ -1,9 +1,9 @@
 ﻿@model IEnumerable<SanPhamModel>
 @{ Layout = "~/Views/Shared/_SecondLayout.cshtml"; }
 
-<div class="container-fluid pt-5">
+<div class="container-fluid pt-5" style=" margin-top: -50px; margin-left: 0px">
     <div class="text-center mb-4">
-        <h2 class="section-title px-5 tuade"><span class="px-2">Gian hàng của bạn</span></h2>
+        <h2 class="section-title px-5 "><span class="px-2">Tin đã ẩn</span></h2>
     </div>
     @foreach (var item in Model)
     {
