--- a/QL_CDC-master/QL_CDC/Views/Shared/_SecondLayout.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/Shared/_SecondLayout.cshtml
@@ -24,6 +24,10 @@
     <!-- Customized Bootstrap Stylesheet -->
     <link href="/template/css/style.css" rel="stylesheet">
     <script src="~/js/DieuKhien.js"></script>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="js/jquery-1.11.1.min.js"></script>
 </head>
 
 <body>
@@ -41,10 +45,11 @@
             <div class="col-lg-6 col-6 text-left">
                 <form action="">
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Tìm kiếm sản phẩm">
                         <div class="input-group-append btnSearch">
+                            <input type="text" class="form-control" placeholder="Tìm kiếm sản phẩm">
+
                             <span class="input-group-text bg-transparent text-primary">
-                                <i class="fa fa-search"></i>
+                                <i class="fa fa-search" style="width: 30px"></i>
                             </span>
                         </div>
                     </div>
@@ -57,11 +62,11 @@
     </div>
     <!-- Topbar End -->
     <!-- Navbar Start -->
-    <div class="container-fluid mb-5">
-        <div class="row border-top px-xl-5">
-            <div class="col-lg-2 d-none d-lg-block">
+    <div class="container-fluid">
+        <div class="row border-top px-xl-5" style= "margin-left: -60px">
+            <div class="col-lg-2 d-none d-lg-block" >
                 <a class="btn shadow-none d-flex align-items-center justify-content-between bg-primary text-white w-100" style="height: 65px; margin-top: -1px; padding: 0 30px;">
-                    <h6 class="m-0" style="color: white">Sản phẩm</h6>
+                    <h5 class="m-0" style="color: white"><b>Danh sách sản phẩm</b></h5>
                 </a>
                 <nav class="collapse show navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0" id="navbar-vertical">
                     <div class="navbar-nav w-100 overflow-hidden" style="height: 410px">
