--- a/QL_CDC-master/QL_CDC/Views/CuaHang/_DieuKhienCuaHangPartial.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/CuaHang/_DieuKhienCuaHangPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿
-<a href="@Url.Action("DanhSachSanPham","CuaHang")" class="nav-item nav-link dndk">Danh sách sản phẩm  <i class="fa fa-bars mr-1"></i></a>
+<a href="@Url.Action("DanhSachSanPham","CuaHang")" class="nav-item nav-link dndk">Sản phẩm đang đăng bán <i class="fa fa-bars mr-1"></i></a>
 <a href="@Url.Action("DanhSachHoaDonNguoiBan","HoaDon")" class="nav-item nav-link dndk">Đơn bán <i class="fa fa-file-text mr-1"></i><small id="HoaDonMoi"></small></a>
 
 <script>
