--- a/QL_CDC-master/QL_CDC/Views/SanPham/TimKiem.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/SanPham/TimKiem.cshtml
@@ -8,7 +8,7 @@
 <!-- Products Start -->
 <div class="container-fluid pt-5" style=" margin-top: -50px; margin-left: 0px">
     <div class="text-center mb-4">
-        <h2 class="section-title px-5"><span class="px-2">Sản phẩm</span></h2>
+        <h3 class="section-title px-5"><span class="px-2">Sản phẩm bạn tìm</span></h3>
     </div>
     <div class="row px-xl-5 pb-3">
         @if (Model.Count() > 0)
