--- a/QL_CDC-master/QL_CDC/Views/Shared/_TimKiemLayout.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/Shared/_TimKiemLayout.cshtml
@@ -29,8 +29,7 @@
 <body>
     @if (User.Identity.IsAuthenticated)
     {
-        @await Html.PartialAsync("../SanPham/_ChatPartial.cshtml")
-    }
+@await Html.PartialAsync("../SanPham/_ChatPartial.cshtml")}
 
     <!-- Topbar Start -->
     <div class="container-fluid">
@@ -43,10 +42,10 @@
             <div class="col-lg-6 col-6 text-left">
                 <form action="">
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Tìm kiếm sản phẩm">
                         <div class="input-group-append btnSearch">
+                            <input type="text" class="form-control" placeholder="Tìm kiếm sản phẩm">
                             <span class="input-group-text bg-transparent text-primary">
-                                <i class="fa fa-search"></i>
+                                <i class="fa fa-search" style="width: 30px"></i>
                             </span>
                         </div>
                     </div>
@@ -61,34 +60,64 @@
     <!-- Navbar Start -->
     <div class="container-fluid">
         <div class="row border-top px-xl-5" style="margin-left: -70px">
-            <div class="col-lg-3 d-none d-lg-block" >
+            <div class="col-lg-3 d-none d-lg-block">
                 <a class="btn shadow-none d-flex align-items-center justify-content-between bg-primary text-white w-100" data-toggle="collapse" href="#navbar-vertical" style="height: 65px; margin-top: -1px; padding: 0 30px;">
                     <h6 class="m-0" style="color: white">Danh mục sản phẩm</h6>
                     <i class="fa fa-angle-down text-dark"></i>
                 </a>
                 <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0 bg-light" id="navbar-vertical" style="width: calc(100% - 30px); z-index: 1;">
-                    <div class="navbar-nav w-100 overflow-hidden" style="height: 410px" id="DMSP">
+                    <div class="navbar-nav w-100 overflow-hidden" style="height: 270px" id="DMSP">
                         <!--
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link danhmuc" data-toggle="dropdown">Đồ dùng cá nhân <i class="fa fa-angle-down float-right mt-1"></i></a>
-                    <div class="dropdown-menu position-absolute bg-secondary border-0 rounded-0 w-100 m-0">
-                        <a href="" class="dropdown-item">Chăn, ra, gối, nệm</a>
-                        <a href="" class="dropdown-item">Giày dép</a>
-                        <a href="" class="dropdown-item">Nón bảo hiểm</a>
-                        <a href="" class="dropdown-item">Nón vải</a>
-                        <a href="" class="dropdown-item">Quần áo</a>
-                        <a href="" class="dropdown-item">Ô, dù</a>
-                    </div>
-                </div>
-                -->
+                        <div class="nav-item dropdown">
+                            <a href="#" class="nav-link danhmuc" data-toggle="dropdown">Đồ dùng cá nhân <i class="fa fa-angle-down float-right mt-1"></i></a>
+                            <div class="dropdown-menu position-absolute bg-secondary border-0 rounded-0 w-100 m-0">
+                                <a href="" class="dropdown-item">Chăn, ra, gối, nệm</a>
+                                <a href="" class="dropdown-item">Giày dép</a>
+                                <a href="" class="dropdown-item">Nón bảo hiểm</a>
+                                <a href="" class="dropdown-item">Nón vải</a>
+                                <a href="" class="dropdown-item">Quần áo</a>
+                                <a href="" class="dropdown-item">Ô, dù</a>
+                            </div>
+                        </div>
+                        -->
 
                     </div>
                 </nav>
+                <div class="container" style="width: 311px; margin-left: -5px">
+                    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#myCarousel" data-slide-to="1"></li>
+                            <li data-target="#myCarousel" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="item active">
+                                <img src="~/template/img/chuyen-muc-rao-vat-nhanh.png" alt="Thiết kế 1">
+                                <div class="carousel-caption">
+                                    @*<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>*@
+                                </div>
+                            </div>
+                            <div class="item">
+                                <img src="~/template/img/chuyen-muc-rao-vat-nhanh.png" alt="Thiết kế 2">
+                                <div class="carousel-caption">
+                                    @*<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>*@
+                                </div>
+                            </div>
+                            <div class="item">
+                                <img src="~/template/img/chuyen-muc-rao-vat-nhanh.png" alt="Thiết kế 3">
+                                <div class="carousel-caption">
+                                    @*<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>*@
+                                </div>
+                            </div>
+                        </div> <a class="left carousel-control" href="http://hocwebgiare.com/#myCarousel" data-slide="prev"> <span class="glyphicon glyphicon-chevron-left"></span> </a> <a class="right carousel-control" href="http://hocwebgiare.com/#myCarousel" data-slide="next"> <span class="glyphicon glyphicon-chevron-right"></span> </a>
+                    </div>
+                </div>
             </div>
-            <div class="col-lg-9">
+
+            <div class="col-lg-9" style="padding:3px">
                 <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0">
                     <a href="@Url.Action("Index","SanPham")" class="text-decoration-none d-block d-lg-none">
-                        <h2 class="m-0 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold border px-3 mr-1">CDC</span>ChoDoCu</h2>
+                        <h2 class="m-0 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold border px-3 mr-1">Chọ rao vặt sinh viên</span></h2>
                     </a>
                     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
@@ -101,12 +130,11 @@
                     @RenderBody()
 
                 </div>
-            </div>           
+            </div>
         </div>
     </div>
-    
-    <!-- Navbar End -->
 
+    <!-- Navbar End -->
     <!-- Footer Start -->
     <div class="container-fluid bg-secondary text-dark mt-5 pt-5">
         <div class="row border-top border-light mx-xl-5 py-4">
@@ -134,11 +162,18 @@
 
     <!-- Template Javascript -->
     <script src="/template/js/main.js"></script>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="js/jquery-1.11.1.min.js"></script>
 </body>
 
 </html>
 
 <script>
+    $('#myCarousel').carousel({
+        interval: 3000
+    });
 
     // Loc
     function Loc() {
