--- a/QL_CDC-master/QL_CDC/Views/Shared/_ThirdLayout.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/Shared/_ThirdLayout.cshtml
@@ -57,6 +57,7 @@
             </div>
         </div>
     </div>
+
     <!-- Topbar End -->
     <!-- Navbar Start -->
     <div class="container-fluid">
@@ -67,54 +68,53 @@
                     <i class="fa fa-angle-down text-dark"></i>
                 </a>
 
-                <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0 bg-light" id="navbar-vertical" style="width: calc(100% - 30px); z-index: 1;">
-                    <div class="navbar-nav w-100 overflow-hidden" style="height: 270px" id="DMSP">
-                        <!--
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link danhmuc" data-toggle="dropdown">Đồ dùng cá nhân <i class="fa fa-angle-down float-right mt-1"></i></a>
-                            <div class="dropdown-menu position-absolute bg-secondary border-0 rounded-0 w-100 m-0">
-                                <a href="" class="dropdown-item">Chăn, ra, gối, nệm</a>
-                                <a href="" class="dropdown-item">Giày dép</a>
-                                <a href="" class="dropdown-item">Nón bảo hiểm</a>
-                                <a href="" class="dropdown-item">Nón vải</a>
-                                <a href="" class="dropdown-item">Quần áo</a>
-                                <a href="" class="dropdown-item">Ô, dù</a>
-                            </div>
+                <ul class="accordion-menu" style="">
+                    <li>
+                        <div class="dropdownlink">
+                            <i class="fa fa-road" aria-hidden="true"></i> History
+                            <i class="fa fa-chevron-down" aria-hidden="true"></i>
                         </div>
-                        -->
-
-                    </div>
-
-                </nav>
-                <div class="container" style="width: 311px; margin-left: -5px">
-                    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                        <ol class="carousel-indicators">
-                            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                            <li data-target="#myCarousel" data-slide-to="1"></li>
-                            <li data-target="#myCarousel" data-slide-to="2"></li>
-                        </ol>
-                        <div class="carousel-inner">
-                            <div class="item active">
-                                <img src="~/template/img/chuyen-muc-rao-vat-nhanh.png" alt="Thiết kế 1">
-                                <div class="carousel-caption">
-                                    @*<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>*@
-                                </div>
-                            </div>
-                            <div class="item">
-                                <img src="~/template/img/chuyen-muc-rao-vat-nhanh.png" alt="Thiết kế 2">
-                                <div class="carousel-caption">
-                                    @*<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>*@
-                                </div>
-                            </div>
-                            <div class="item">
-                                <img src="~/template/img/chuyen-muc-rao-vat-nhanh.png" alt="Thiết kế 3">
-                                <div class="carousel-caption">
-                                    @*<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>*@
-                                </div>
-                            </div>
-                        </div> <a class="left carousel-control" href="http://hocwebgiare.com/#myCarousel" data-slide="prev"> <span class="glyphicon glyphicon-chevron-left"></span> </a> <a class="right carousel-control" href="http://hocwebgiare.com/#myCarousel" data-slide="next"> <span class="glyphicon glyphicon-chevron-right"></span> </a>
-                    </div>
-                </div>
+                        <ul class="submenuItems">
+                            <li><a href="#">History book 1</a></li>
+                            <li><a href="#">History book 2</a></li>
+                            <li><a href="#">History book 3</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <div class="dropdownlink">
+                            <i class="fa fa-paper-plane" aria-hidden="true"></i> Fiction
+                            <i class="fa fa-chevron-down" aria-hidden="true"></i>
+                        </div>
+                        <ul class="submenuItems">
+                            <li><a href="#">Fiction book 1</a></li>
+                            <li><a href="#">Fiction book 2</a></li>
+                            <li><a href="#">Fiction book 3</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <div class="dropdownlink">
+                            <i class="fa fa-quote-left" aria-hidden="true"></i> Fantasy
+                            <i class="fa fa-chevron-down" aria-hidden="true"></i>
+                        </div>
+                        <ul class="submenuItems">
+                            <li><a href="#">Fantasy book 1</a></li>
+                            <li><a href="#">Fantasy book 2</a></li>
+                            <li><a href="#">Fantasy book 3</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <div class="dropdownlink">
+                            <i class="fa fa-motorcycle" aria-hidden="true"></i> Action
+                            <i class="fa fa-chevron-down" aria-hidden="true"></i>
+                        </div>
+                        <ul class="submenuItems">
+                            <li><a href="#">Action book 1</a></li>
+                            <li><a href="#">Action book 2</a></li>
+                            <li><a href="#">Action book 3</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                
             </div>
 
 
@@ -177,9 +177,35 @@
 
 <script>
 
-    $('#myCarousel').carousel({
-        interval: 3000
-    });
+    $(function () {
+        var Accordion = function (el, multiple) {
+            this.el = el || {};
+            // more then one submenu open?
+            this.multiple = multiple || false;
+
+            var dropdownlink = this.el.find('.dropdownlink');
+            dropdownlink.on('click',
+                { el: this.el, multiple: this.multiple },
+                this.dropdown);
+        };
+
+        Accordion.prototype.dropdown = function (e) {
+            var $el = e.data.el,
+                $this = $(this),
+                //this is the ul.submenuItems
+                $next = $this.next();
+
+            $next.slideToggle();
+            $this.parent().toggleClass('open');
+
+            if (!e.data.multiple) {
+                //show only one menu at the same time
+                $el.find('.submenuItems').not($next).slideUp().parent().removeClass('open');
+            }
+        }
+
+        var accordion = new Accordion($('.accordion-menu'), false);
+    })
 
     // Tim kiem theo ten
     function TimKiemTheoTen() {
