--- a/QL_CDC-master/QL_CDC/wwwroot/template/css/style.css
+++ b/QL_CDC-master/QL_CDC/wwwroot/template/css/style.css
@@ -11171,3 +11171,122 @@ a.text-dark:hover, a.text-dark:focus {
     .thongtincanhan textarea:focus {
         border: 0.5px solid #0f983b;
     }
+
+body {
+    padding-top: 0px;
+}
+
+.carousel-indicators {
+    bottom: 15px;
+    left: 10px;
+    width: auto;
+    margin-left: 0;
+}
+
+    .carousel-indicators li {
+        border-radius: 0;
+        width: 8px;
+        height: 8px;
+        background: #fff;
+    }
+
+    .carousel-indicators .active {
+        width: 10px;
+        height: 10px;
+        background: #3276b1;
+        border-color: #3276b1;
+    }
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family: 'Montserrat', sans-serif;
+    background: #388E3C;
+}
+
+ul {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+h2 {
+    text-align: center;
+    margin: 20px auto;
+    color: #fff;
+}
+
+.accordion-menu {
+    width: 100%;
+    max-width: 350px;
+    margin: 60px auto 20px;
+    background: #fff;
+    border-radius: 4px;
+}
+
+    .accordion-menu li.open .dropdownlink {
+        color: #CDDC39;
+        .fa-chevron-down
+
+{
+    transform: rotate(180deg);
+}
+
+}
+
+.accordion-menu li:last-child .dropdownlink {
+    border-bottom: 0;
+}
+
+.dropdownlink {
+    cursor: pointer;
+    display: block;
+    padding: 15px 15px 15px 45px;
+    font-size: 18px;
+    border-bottom: 1px solid #ccc;
+    color: #212121;
+    position: relative;
+    transition: all 0.4s ease-out;
+    i
+
+{
+    position: absolute;
+    top: 17px;
+    left: 16px;
+}
+
+.fa-chevron-down {
+    right: 12px;
+    left: auto;
+}
+
+}
+
+.submenuItems {
+    display: none;
+    background: #C8E6C9;
+    li
+
+{
+    border-bottom: 1px solid #B6B6B6;
+}
+
+}
+
+.submenuItems a {
+    display: block;
+    color: #727272;
+    padding: 12px 12px 12px 45px;
+    transition: all 0.4s ease-out;
+    &:hover
+
+{
+    background-color: #CDDC39;
+    color: #fff;
+}
+}
