--- a/QL_CDC-master/QL_CDC/Views/Shared/_LoginPartial.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/Shared/_LoginPartial.cshtml
@@ -48,6 +48,7 @@
     <a href="@Url.Action("DanhSachHoaDonNguoiMua","HoaDon")" class="nav-item nav-link dndk">Đơn hàng <i class="fa fa-file-text"></i></a>
 
     
-</div>}
+</div>
+}
 
 
